--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -8,28 +8,22 @@
 {% block body %}
 	<div class="entrylist">
 		<h1>Coding Patterns in Django</h1>
-		<h2>Banned from Conferences!</h2>
-		<p>Yes! Some of these coding patterns are <em>so</em> controversial 
-			that the organizers of a well-known Django conference would not
-			let them be presented!</p>
-		<h2>May not be suitable for young developers!</h2>
-		<p>Some people believe that some of the patterns held within may corrupt
-			or confuse young or inexperienced developers. <strong>Beware.</strong>
-			We are not responsible for any ill mental effects resulting from 
-			reading these patterns.</p>
-		<p><strong>Not responsible for:</strong>
-			<ul>
-				<li>Anal leakage</li>
-				<li>Temporary insanity</li>
-				<li>Synesthesia</li>
-				<li>Purple or multi-colored discharge</li>
-				<li>Delusions of grandeur</li>
-				<li>Alien abduction and/or probing</li>
-				<li>Arachibutyrophobia</li>
-			</ul>
-		</p>
 		<h2>About this site</h2>
-		
+		<p>I created Django Patterns.com in response to a talk proposal rejection 
+		from DjangoCon.us. Although I was not privy to the exact discussion, 
+		reviewers and organizers felt a <a href="http://blip.tv/pycon-us-videos-2009-2010-2011/pycon-2011-pluggable-django-patterns-4900929" title="Pluggable Django Patterns">previous talk I had 
+		presented at PyCon in 2011</a> presented &ldquo;non-standard and 
+		controversial practices were framed as the normal and accepted ways of 
+		doing things&rdquo;. Obviously this &ldquo;raised concerns of misleading 
+		less experienced developers&rdquo;.</p>
+		<p>This site&rsquo;s goals are simply:
+		    <ul class="simple">
+		        <li>Easily look up a pattern for doing something</li>
+		        <li>Get a clear explanation of how, when, why to use it</li>
+		        <li>Provide for feedback and open discussion of the pattern by the community</li>
+		        <li>Allow anyone to contribute patterns</li>
+		    </ul>
+		</p>
 	</div>
 {% endblock %}
 {% block extra_body %}
