--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -135,11 +135,6 @@ li ul {
     margin-bottom: 1em;
 }
 
-#breadcrumbs {
-    border-bottom: 1px solid #999;
-    padding-bottom: .2em;
-}
-
 .headerlink {
     visibility: hidden;
 }
@@ -183,22 +178,65 @@ body {
     color: #980606;
     font-size: 3em;
 }
-a {
+a { text-decoration: none; }
+
+a:hover { text-decoration: underline; }
+
+ul.simple { list-style: disc inside; }
+
+ul.simple li { margin-bottom: .5em; }
+
+#breadcrumbs {
+    border-bottom: 1px solid #999;
+    margin-bottom: .4em;
+    background-color: #fdfdfd;
+}
+
+#breadcrumbs ul { margin: 0; }
+
+#breadcrumbs li a {
+    background: transparent url(../img/breadcrumbs.png) no-repeat 0 0;
+    display: block;
+    color: #382E1F;
+    height: 31px;
+    line-height: 31px;
+    padding: 0 20px;
+    margin-left: -10px;
     text-decoration: none;
+    font-size: 11px;
+    float: left;
+    z-index: 1;
+    font-family: 'Arial', 'Helvetica', sans-serif;
+}
+#breadcrumbs li a:hover {
+    background-position: 0 -31px;
+}
+#breadcrumbs li {
+    display: inline;
+    list-style: none;
+}
+#breadcrumbs li:first-child a {
+    background-position: 0 -93px;
+    width: 45px;
+    padding: 0;
+    margin-left: 0;
+}
+#breadcrumbs li:first-child a:hover { background-position: 0 -124px; }
+
+#menu_container { margin-top:1em; }
+
+#sbmenu li a {
+    height: 31px;
+    line-height: 31px;
+    padding: 0 20px;
+    font-family: 'Arial', 'Helvetica', sans-serif;
+    display: block;
 }
 
-a:hover {
-    text-decoration: underline;
+.legal {
+    font-family: 'Arial', 'Helvetica', sans-serif;
+    font-size: 11px;
+    border-top: 1px solid #999;
+    padding-top: .5em;
 }
 
-#main {
-    padding-top: 1em;
-}
-
-ul.simple {
-    list-style: disc inside;
-}
-
-ul.simple li {
-    margin-bottom: .5em;
-}
