--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -16,7 +16,17 @@
 	</div>
 {% endblock sidebar %}
 {% block footer %}
-<div class="legal"><a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.</div>
+<div class="legal sixteen columns">
+    <p>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">
+            <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc/3.0/80x15.png" />
+        </a>
+        This <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" rel="dct:type">work</span> 
+        by <a xmlns:cc="http://creativecommons.org/ns#" href="http://djangopatterns.com/" property="cc:attributionName" rel="cc:attributionURL">djangopatterns.com</a> 
+        is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+        Based on a work at <a xmlns:dct="http://purl.org/dc/terms/" href="http://{{ request.get_host }}{{ request.path}}" rel="dct:source">{{ request.get_host }}{{ request.path}}</a>.
+    </p>
+</div>
 {% endblock footer %}
 {% block extra_body_base %}
 {% analytics_async %}
