--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -16,14 +16,66 @@
 		controversial practices were framed as the normal and accepted ways of 
 		doing things&rdquo;. Obviously this &ldquo;raised concerns of misleading 
 		less experienced developers&rdquo;.</p>
-		<p>This site&rsquo;s goals are simply:
+		<p>As a result, I want to provide a space where solutions to common Django
+		    problems are presented thoroughly and discussed <em>openly.</em>
+		</p>
+		<p>In short, this site&rsquo;s goals are:
 		    <ul class="simple">
-		        <li>Easily look up a pattern for doing something</li>
+		        <li>Provide a place look up a pattern for doing something</li>
 		        <li>Get a clear explanation of how, when, why to use it</li>
 		        <li>Provide for feedback and open discussion of the pattern by the community</li>
 		        <li>Allow anyone to contribute patterns</li>
 		    </ul>
 		</p>
+		<h2>How to contribute</h2>
+		<p>There are several ways to contribute:
+		    <ul class="simple">
+		        <li>Comment and discuss patterns on the site</li>
+		        <li>Suggest improvements to the site</li>
+		        <li>Submit new patterns</li>
+		        <li>Add to or enhance existing patterns</li>
+		    </ul>
+		</p>
+		<h3>Comment and discuss patterns on the site</h3>
+		<p>Please contribute your ideas, pros and cons of patterns using the
+		    <a href="http://disqus.com/">Disqus</a> comments form on each page.</p>
+		<p>Here are some guidelines:
+		    <ul class="simple">
+		        <li>Be courteous.</li>
+		        <li>Comment on the pattern or idea, not the person submitting.</li>
+		        <li>Be helpful in your feedback</li>
+		    </ul>
+		</p>
+		<h3>Suggest improvements to the site</h3>
+		<p>In order to be a good community resource, I welcome any ideas to 
+		    improve the site. The best way is to open an issue on 
+		    <a href="https://github.com/coordt/djangopatterns.com/issues">the GitHub</a>
+		    repository for the site.
+		</p>
+		<p>The site&rsquo;s code is open source, and licensed under the BSD license,
+		    so feel free to contribute code, or just use the code for your own site.
+		</p>
+		<h3>Submit new patterns</h3>
+		<p>
+		    The Django Patterns content is actually a 
+		    <a href="http://sphinx.pocoo.org/">Sphinx</a> project. Its code is
+		    <a href="https://github.com/coordt/djangopatterns">on GitHub</a>.
+		    Fork the repository and add your pattern. There is an <tt>example_pattern.rst</tt>
+		    file with a basic outline. Then submit a pull request.
+		</p>
+		<p>
+		    Every complete submission will be accepted, even if I personally 
+		    disagree with the pattern. I reserve the right to make exceptions
+		    to what is accepted in the future, and will do so publicly. As 
+		    editor of the site, I may edit your submission for clarity, grammar, 
+		    and such.
+		</p>
+		<h3>Add to or enhance existing patterns</h3>
+		<p>
+		    Follow the same instructions for submitting a new pattern: fork the 
+		    <a href="https://github.com/coordt/djangopatterns">djangopatterns repository</a>,
+		    make the changes, and submit a pull request.
+		<p>
 	</div>
 {% endblock %}
 {% block extra_body %}
