--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -45,25 +45,6 @@
 	@media only screen and (min-width: 480px) and (max-width: 767px) and (max-device-width: 1000px) {}
 	
 
-/* #Font-Face
-================================================== */
-/* 	This is the proper syntax for an @font-face file 
-		Just create a "fonts" folder at the root, 
-		copy your FontName into code below and remove
-		comment brackets */
-		
-/*	@font-face {
-	    font-family: 'FontName';
-	    src: url('../fonts/FontName.eot');
-	    src: url('../fonts/FontName.eot?iefix') format('eot'),
-	         url('../fonts/FontName.woff') format('woff'),
-	         url('../fonts/FontName.ttf') format('truetype'),
-	         url('../fonts/FontName.svg#webfontZam02nTh') format('svg');
-	    font-weight: normal;
-	    font-style: normal; }
-*/
-
-/* -- code displays --------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6 { 
     font-family: 'PT Sans Narrow', 'Arial Narrow', 'Arial', 'Helvetica';
 	letter-spacing:-0.03em;
@@ -72,7 +53,9 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-weight: 700;
 }
-
+a { color: #F96C08;}
+a:hover { color: #F96C08;}
+a:visited { color: #65748e;}
 pre {
     overflow: auto;
     background-color:#F1F5F9;
@@ -240,3 +223,10 @@ ul.simple li { margin-bottom: .5em; }
     padding-top: .5em;
 }
 
+#disqus_thread {
+    border-top: 1px solid #999;
+}
+#disqus_thread h3 {
+    font-size: 1.5em;
+    line-height: 1.6em;
+}
