--- a/templates/base.html
+++ b/templates/base.html
@@ -57,10 +57,6 @@
 	</div> {# container #}
     {% endblock body_outer %}{% spaceless %}
     <script src="{{ STATIC_URL }}js/hyphenator.js" type="text/javascript"></script>
-	<script type="text/javascript">
-	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
 		<!-- JS
     	================================================== -->
     	<script src="{{ STATIC_URL }}/js/app.js"></script>
@@ -71,6 +67,7 @@
     {% block extra_body_base %}
         {% block extra_body %}{% endblock %}
     {% endblock %}
+    {% load analytics %}{% analytics_async %}
 </body>
 </html>
 {%endspaceless%}
