--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -230,3 +230,28 @@ ul.simple li { margin-bottom: .5em; }
     font-size: 1.5em;
     line-height: 1.6em;
 }
+
+#contents ul.simple {
+    list-style: none inside;
+}
+#contents ul.simple li {
+    margin-bottom: .5em;
+    line-height: 1.2em;
+}
+#contents p {
+    margin: 0;
+}
+#contents a {
+    color: #000;
+}
+
+h1 a, h2 a, h3 a, h4 a, h5 a {
+    color: #000;
+}
+
+li p:last-child {
+    margin-bottom: 0;
+}
+.highlight-python {
+    overflow: scroll;
+}
