Added the flat pages support and new menu items, which are flat pages)

--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -12,6 +12,8 @@
 	<ul id="sbmenu">
 		<li><a href="/" title="Home">Home</a></li>
 		<li><a href="/patterns/">Patterns</a></li>
+		<li><a href="/about/">About this site</a></li>
+		<li><a href="/contribute/">How to contribute</a></li>
 	</ul>
 	</div>
 {% endblock sidebar %}
