Updated fabfile and css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -57,6 +57,7 @@
 		color: #000; 
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
 		-webkit-text-size-adjust: 100%;
+		text-rendering: optimizelegibility;
  }
 	
 
