--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {%spaceless%}
+{% load compress %}
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -18,10 +19,11 @@
 
   	<!-- CSS
     ================================================== -->
+    {% compress css %}
   	<link rel="stylesheet" href="{{ STATIC_URL }}css/base.css">
   	<link rel="stylesheet" href="{{ STATIC_URL }}css/skeleton.css">
   	<link rel="stylesheet" href="{{ STATIC_URL }}css/layout.css">
-
+    {% endcompress %}
   	<!-- Favicons
   	================================================== -->
   	<link rel="shortcut icon" href="{{ STATIC_URL }}img/favicon.ico">
@@ -56,14 +58,10 @@
 	<div id="footer">{% block footer %}{% endblock %}</div>
 	</div> {# container #}
     {% endblock body_outer %}{% spaceless %}
+    {% compress js %}
     <script src="{{ STATIC_URL }}js/hyphenator.js" type="text/javascript"></script>
-		<!-- JS
-    	================================================== -->
-    	<script src="{{ STATIC_URL }}/js/app.js"></script>
-
-    <!-- End Document
-    ================================================== -->
-    
+	<script src="{{ STATIC_URL }}js/app.js"></script>
+    {% endcompress %}
     {% block extra_body_base %}
         {% block extra_body %}{% endblock %}
     {% endblock %}
