Updated the home page style and layout a bit

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,10 +47,10 @@
 	    </div>
     </div>
 	<div class="container">
-	<div id="sidebar" class="three columns sidebar">
+	<div id="sidebar" class="four columns sidebar">
 		{% block sidebar %}&nbsp;{% endblock %}
 	</div>
-    <div id="main" class="twelve columns offset-by-one">
+    <div id="main" class="twelve columns">
 		{% block content_nav %}{% endblock %}
 		{% block search %}{% endblock %}
         {% block body %}{% endblock %}
