--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -22,7 +22,16 @@
 
 /* #Media Queries
 ================================================== */
-	
+#menu_container { margin-top:1em; }
+
+#sbmenu li a {
+/*    height: 1.3em;
+*/    line-height: 1em;
+    padding: 0 20px;
+    font-family: 'Arial', 'Helvetica', sans-serif;
+    display: block;
+}
+
 	/* iPad Portrait/Browser */
 	@media only screen and (min-width: 768px) and (max-width: 991px) {}
 	
@@ -31,6 +40,27 @@
 	    div.container {
 	        padding: 0 10px;
 	    }
+	    #menu_container {
+	        padding:0;
+	        margin:0 -10px;
+	    }
+        #menu_container ul {
+            margin:0;
+        }
+        #menu_container li {
+            padding: .2em;
+            margin:0;
+            border-bottom: 1px solid #E0E0E0;
+            font-weight: bold;
+        }
+        #sbmenu li a {
+            padding: 0;
+            color: #000;
+            display: block;
+            padding: 8px 32px 8px 8px;
+            text-decoration: none;
+            
+        }
 	}
 	
 	/* Mobile Landscape/Browser */
@@ -57,6 +87,9 @@ h1 {
     font-weight: 700;
 }
 
+h1 + h2 {
+    margin-top: .5em;
+}
 h2 {
 	margin-top: 1.25em;
 	font-weight: normal;
@@ -160,13 +193,20 @@ body {
 #header {
     height:90px;
     background-color: #2e3441;
+    -webkit-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, .4);
+    -moz-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, .4);
+    box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, .4);
 }
 
 #header div.container {
     height:90px;
     background: #2e3441;
 }
-
+#header + div.container {
+    -webkit-box-shadow: inset 0px 3px 4px 0px rgba(0, 0, 0, .4);
+    -moz-box-shadow: inset 0px 3px 4px 0px rgba(0, 0, 0, .4);
+    box-shadow: inset 0px 3px 4px 0px rgba(0, 0, 0, .4);
+}
 #header p {
     color: #980606;
     font-size: 3em;
@@ -195,13 +235,12 @@ ul.simple li { margin-bottom: .5em; }
     border-bottom: 1px solid #999;
     border-top: 1px solid #999;
     margin-bottom: .4em;
-    background-color: #fdfdfd;
 }
 
 #breadcrumbs ul { margin: 0; }
 
 #breadcrumbs li a {
-    background: transparent url(../img/breadcrumbs.png) no-repeat 0 0;
+    background: transparent;
     display: block;
     color: #382E1F;
     height: 31px;
@@ -214,30 +253,16 @@ ul.simple li { margin-bottom: .5em; }
     z-index: 1;
     font-family: 'Arial', 'Helvetica', sans-serif;
 }
-#breadcrumbs li a:hover {
-    background-position: 0 -31px;
-}
 #breadcrumbs li {
     display: inline;
     list-style: none;
 }
 #breadcrumbs li:first-child a {
-    background-position: 0 -93px;
     width: 45px;
     padding: 0;
     margin-left: 0;
 }
-#breadcrumbs li:first-child a:hover { background-position: 0 -124px; }
 
-#menu_container { margin-top:1em; }
-
-#sbmenu li a {
-    height: 31px;
-    line-height: 31px;
-    padding: 0 20px;
-    font-family: 'Arial', 'Helvetica', sans-serif;
-    display: block;
-}
 
 .legal {
     font-family: 'Arial', 'Helvetica', sans-serif;
@@ -291,4 +316,38 @@ div.admonition p {
 
 td.code {
     width: 100%;
+}
+
+.item { 
+    position: relative;
+    margin-left: 4.8em;
+}
+.date { 
+    font-family: 'PT Sans Narrow', 'Arial Narrow', 'Arial', 'Helvetica';
+    border: 1px solid #999; 
+    left: -4.8em; 
+    line-height: 1; 
+    position: absolute; 
+    top: 0; 
+    width: 3.1em;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+.date span { 
+    display: block; 
+    text-align: center; 
+}
+.month { 
+    text-transform: uppercase; 
+    font-size: 1em;
+    padding-top: 0.2em; 
+}
+.day { font-size: 2em; font-weight: 700;}
+.year { 
+    background-color: #313D5F; 
+    color: #FFF; 
+    font-size: 1em; 
+    padding: 0.2em 0; 
+    margin-top: 0.2em;
 }
