Fixed an RSS problem.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,8 +1,8 @@
 {% extends "site_base.html" %}
 {% block head_title %}Home{% endblock %}
-{% block extra_head %}
-	{# <link rel="alternate" href="{% url rss_feed %}" type="application/rss+xml" title="RSS 2.0" charset="utf-8"> #}
-{% endblock %}
+{# {% block extra_head %} #}
+{#     <link rel="alternate" href="{% url rss_feed %}" type="application/rss+xml" title="RSS 2.0" charset="utf-8"> #}
+{# {% endblock %} #}
 {% block body %}
 	<div class="entrylist">
 		<h1>Coding Patterns in&nbsp;Django</h1>
