--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -2,7 +2,7 @@
 {% block extra_head %}
 <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
 <link rel="alternate" type="application/rss+xml" href="{% url rss-feed %}" title="RSS Changes to this site feed">
-<link rel="alternate" type="application/atom+xml" href="{% url atom-feed %}" title="Atom Changes to this site feed">
+{# <link rel="alternate" type="application/atom+xml" href="{% url atom-feed %}" title="Atom Changes to this site feed"> #}
 {% endblock %}
 {% block site_header %}
 <img src="{{ STATIC_URL }}img/djangopatterns-h.png" width="542" height="80" alt="DjangoPatterns.com">
