--- a/templates/docs/doc.html
+++ b/templates/docs/doc.html
@@ -18,7 +18,7 @@
 {% for parent in doc.parents %}
 <li><a href="{{ parent.link }}">{{parent.title}}</a></li>
 {% endfor %}
-<li><a href="#">{{ doc.title }}</a></li>
+{# <li><a href="#">{{ doc.title }}</a></li> #}
 </ul>
 <div class="clearfix"></div>
 </div>
